main.css
body {
    background-color: #4286f4;
}

.contents {
    padding-top: 60px;
    margin-top: 58px;
    background-color: #fff;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    overflow: scroll;
}

.nav-wrapper {
    font-family: 'Raleway', sans-serif;
    width: 100%;
    background-color: #4286f4;
    padding: 0px;
    position: fixed;
    left: 0;
    top: 0;
    height: 59px;
    z-index: 10;
}

.nav-wrapper p {
    margin: 0;
    position: fixed;
    display: block;
    color: white;
    top: 15px;
    left: 20px;
    font-size: 26px;
}

.nav-wrapper ul {
    list-style-type: none;
    margin: 0;
    padding: 0px;
    overflow: hidden;
    background-color: #4286f4;
    position: fixed;
    top: 0;
    right: 0px;
}

.nav-wrapper li {
    float: left;
}

.nav-wrapper li a {
    display: block;
    color: white;
    text-align: center;
    padding: 20px 25px;
    text-decoration: none;
    -webkit-transition: 0.2s; /* For Safari 3.1 to 6.0 */
    transition: 0.2s;
}

.nav-wrapper li a:hover {
    background-color: #225fc1;
}

.outlinedsection {
    width: 85%;
    position: relative;
    margin: 0 auto;
    border-style: solid;
    border-radius: 10px;
    margin-bottom: 40px;
}

.outlinedsection p {
    margin: 0;
    padding: 20px;
}

